# ledit

./: .clang-format  .gitignore  CMakeLists.txt
assets/: camera.vs  cursor.fs  cursor.vs  selection.fs  selection.vs  text.fs  text.vs
glad/: CMakeLists.txt
src/: config_provider.cpp  config_provider.h  cursor.cpp  cursor.h  document.cpp  document.h  drawable.cpp  drawable.h  font_atlas.cpp  font_atlas.h  glfwapp.cpp  glfwapp.h  highlighting.h  la.h  languages.cc  languages.h  main.cc  providers.h  renderchar.h  renderer.cpp  renderer.h  shader.h  state.cc  state.h  u8String.cc  u8String.h  utils.cpp  utils.h  vertex_buffer.cpp  vertex_buffer.h
src/glutil/: drawable.cpp  drawable.h  gpu.cpp  gpu.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_buffer.h
